# AppCode

./: .codelint.yml  .gitignore  CONTRIBUTING.md  Dockerfile  Package.code  Package.resolved  README.md  format_and_lint.sh  generate.sh  test.sh  vcpkg.json
.github/workflows/: build-test-and-docs.yml  swiftlint.yml
Examples/: Bundler.toml  Package.code  Package.resolved
NativeDemo/: NSAppDelegate.code  UIAppDelegate.code
NativeDemo/TokamakDemo.xcodeproj/: project.pbxproj
Plugins/BridgeJS/: Package.code  README.md
Plugins/PackageToJS/: Package.code  README.md
Runtime/src/: closure-heap.ts  find-global.ts  index.ts  itc.ts  js-value.ts
Sources/AndroidAnimation/: AndroidAnimation.code  Animator+AnimatorListener.code  Animator+AnimatorPauseListener.code  Animator.code  AnimatorInflater.code  AnimatorListenerAdapter.code  AnimatorSet+Builder.code  AnimatorSet.code  ArgbEvaluator.code  BidirectionalTypeConverter.code  FloatArrayEvaluator.code  FloatEvaluator.code  (+18 more)
Sources/CodiraWin32/: CMakeLists.txt
Sources/CodiraWin32/Animation and Haptics/: ViewControllerContextTransitioning.code
Sources/CodiraWin32/Animation and Haptics/Property-Based Animations/: CubicTimingParameters.code  SpringTimingParameters.code  TimingCurveProvider.code  ViewAnimating.code  ViewImplicitlyAnimating.code
Sources/CodiraWin32/Animation and Haptics/View Controller Transitions/: ViewControllerAnimatedTransitioning.code  ViewControllerInteractiveTransitioning.code  ViewControllerTransitionCoordinator.code  ViewControllerTransitionCoordinatorContext.code  ViewControllerTransitioningDelegate.code
Sources/CodiraWin32/App and Environment/: AdaptivePresentationControllerDelegate.code  Application.code  ApplicationDelegate.code  ApplicationMain.code  Device.code  TraitCollection.code  TraitEnvironment.code
Sources/CodiraWin32/App and Environment/Scenes/: Scene.code  SceneConfiguration.code  SceneDelegate.code  SceneSession.code  WindowScene.code  WindowSceneDelegate.code
Sources/CodiraWin32/Appearance Customization/: Appearance.code
Sources/CodiraWin32/Appearance Customization/Configurations/: BackgroundConfiguration.code  CellConfigurationState.code  ConfigurationColorTransformer.code  ConfigurationStateCustomKey.code  ContentConfiguration.code  ListContentConfiguration.code  ViewConfigurationState.code
Sources/CodiraWin32/Application/: Information.code  LaunchKeyOptions.code
Sources/CodiraWin32/AutoLayout/: LayoutAnchor.code  LayoutConstraint+Cassowary.code  LayoutConstraint.code  LayoutDimension.code  LayoutPriority.code  LayoutXAxisAnchor.code  LayoutYAxisAnchor.code
Sources/CodiraWin32/CoreAnimation/: Transform3D.code
Sources/CodiraWin32/CoreGraphics/: AffineTransform.code  Point.code  Rect.code  Size.code  Vector.code
Sources/CodiraWin32/Drag and Drop/: SpringLoadedInteractionContext.code
Sources/CodiraWin32/Drawing/: Color.code
Sources/CodiraWin32/Focus-Based Navigation/: FocusAnimationCoordinator.code  FocusEnvironment.code  FocusItem.code  FocusItemContainer.code  FocusUpdateContext.code
Sources/CodiraWin32/Images and PDF/: Image.code
Sources/CodiraWin32/Keyboards and Input/: TextInputTraits.code
Sources/CodiraWin32/Menus and Shortcuts/: Action.code  Command.code  ContextMenuConfiguration.code  ContextMenuInteraction.code  ContextMenuInteractionAnimating.code  ContextMenuInteractionCommitAnimating.code  ContextMenuInteractionDelegate.code  Menu.code  MenuBuilder.code  MenuElement.code  MenuSystem.code  PreviewTarget.code  TargetedPreview.code
Sources/CodiraWin32/Platform/: BatteryMonitor.code  Error.code  OrientationSensor.code  Win32+Menu.code  Win32+PropertyWrappers.code  WindowClass.code  WindowsHandle.code
Sources/CodiraWin32/Pointer Interactions/: PointerInteraction.code  PointerInteractionAnimating.code  PointerInteractionDelegate.code  PointerRegion.code  PointerRegionRequest.code  PointerStyle.code
Sources/CodiraWin32/Support/: Array+Extensions.code  Date+Extensions.code  IndexPath+UIExtensions.code  Logging.code  Point+UIExtensions.code  Rect+UIExtensions.code  Size+UIExtensions.code  String+UIExtensions.code  WinSDK+Extensions.code  WinSDK+UIExtensions.code  WindowMessage.code  WindowsHandle+UIExtensions.code
Sources/CodiraWin32/Text Display and Fonts/: Font.code  FontDescriptor.code  FontMetrics.code
Sources/CodiraWin32/Text Storage/: ParagraphStyle.code
Sources/CodiraWin32/Touches, Presses, and Gestures/: Event.code  GestureRecognizer.code  GestureRecognizerDelegate.code  Press.code  PressesEvent.code  Responder.code  TapGestureRecognizer.code  Touch.code
Sources/CodiraWin32/UI/: ContentSizeCategoryAdjusting.code  ContentSizeCategoryImageAdjusting.code  Interaction.code
Sources/CodiraWin32/View Controllers/: ContentContainer.code  PresentationController.code  ViewController.code
Sources/CodiraWin32/Views and Controls/: Axis.code  BarButtonItem.code  BarButtonItemGroup.code  BarItem.code  BarPositioning.code  Button.code  Control.code  DatePicker.code  DirectionalEdgeInsets.code  DirectionalRectEdge.code  EdgeInsets.code  ImageView.code  Label.code  Offset.code  PickerView.code  ProgressView.code  Slider.code  Stepper.code  Switch.code  TextAlignment.code  TextField.code  TextView.code  View.code
Sources/CodiraWin32/Views and Controls/Table Views/: ContextualAction.code  SwipeActionsConfiguration.code  TableView.code  TableViewCell.code  TableViewDataSource.code  TableViewDelegate.code  TableViewHeaderFooterView.code
Sources/CodiraWin32/Windows and Screens/: AlertAction.code  AlertController.code  CoordinateSpace.code  Screen.code  Window.code
Sources/CodiraWin32UI/: CMakeLists.txt  Never+CodiraUI.code
Sources/CodiraWin32UI/App Structure and Behaviour/: App.code  SceneBuilder.code
Sources/CodiraWin32UI/Framework Integration/: UIApplicationDelegateAdaptor.code
Sources/CodiraWin32UI/View Layout and Presentation/: AnyView.code  EquatableView.code  Group.code
Sources/CodiraWin32UI/Views and Controls/: Label.code  ViewBuilder.code
Utilities/: Instructions.json  Package.code  README.md  build-release.py  format.py
gyb/: gyb.py
(+10230 files in other folders)
